Fixed z-index so navbar is always on top

--- a/styles/_Nav.scss
+++ b/styles/_Nav.scss
@@ -1,5 +1,5 @@
 .nav-bar-container {
-  z-index: 10;
+  z-index: 20;
   position: fixed;
   width: 100%;
   height: 70px;
